 - added support for --find-jvm-dll parameter (Bill Janssen)
 - fixed bug with not inheriting type parameters to inner parameterized classes
 - added support for of_() method to set instance type parameters
 - fixed bug with not heeding type parameter for --sequence get method
 - parameterized return values are now unboxed
 - improved auto-boxing of primitive type parameters
 - added support for auto-boxing CharSequence from python strings
 - 

Version 2.4 -> 2.5
------------------
 - added env.jni_version for the JNI version as returned by JNI's GetVersion()
 - added env.java_version for java.lang.System.getProperty('java.version')
 - default value to initVM's classpath parameter now is importing module's
 - added support for Java generics
 - added 'string_' property to JArray('byte') instances to extract byte string
 - fixed bug with passing list of extension objects
 - reworked iterator and enumeration 'next' templates to shortcut C++ wrappers
 - fixed bug in code comparing setuptools versions when >= 0.6c10
 - verified build against setuptools from distribute 0.6.6
 - renamed patch.43 to differentiate setuptools versions

Version 2.3 -> 2.4
------------------
 - added 'typeof' to reserved word list
 - added Java stacktrace to __str__() of JavaError, fixing half of PYLUCENE-1
 - fixed local string ref leaks in JArray<jstring>.get/toSequence (Aric Coady)
 - added --libpath parameter to specify -Djava.library.path
 - classes listed with --exclude are no longer loaded (except for dependencies)
 - added --vmarg to add Java VM initialization parameters (Christian Kofler)
 - added support for passing a directory to --module
 - byte values are now returned as signed numbers as opposed to one-char strs
 - added --arch command line flag to filter Mac OS X python config settings
 - cast_() and instance_() methods now generated on extension classes as well
 - fixed bug with reporting Python error that occurred in an extension class

Version 2.2 -> 2.3
------------------