@@ -12,7 +12,9 @@ Version 2.5 ->
  - fixed bug with not heeding type parameter for --sequence get method
  - parameterized return values are now unboxed
  - improved auto-boxing of primitive type parameters
- - added support for auto-boxing CharSequence from python strings
+ - added support for auto-boxing CharSequence from python str and unicode
+ - added support for auto-boxing Number from python int, long and float
+ - added 'asm' to list of reserved words
  - 
 
 Version 2.4 -> 2.5
